[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codereviewbench"
version = "0.1.0"
description = "CodeReviewBench OpenEnv environment"
authors = [
    { name = "Sree Manas" }
]

dependencies = [
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"