[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codereviewbench"
version = "0.1.0"
description = "CodeReviewBench OpenEnv environment"
authors = [
    { name = "Sree Manas" }
]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0",
]

[project.scripts]
server = "server.app:main"